jupyter-notebook/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jupyter-notebook
spec:
  type: NodePort
  selector:
    app: jupyter-notebook
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8888
      nodePort: 30080
