jupyter-notebook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-notebook
spec:
  rules:
  - host: jupyter-notebook.ymmmtym.com.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyter-notebook
            port: 
              number: 80
